# libwosi

./: .cproject  .gitignore  .project  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  wosi.pc.in  wou.pc.in
debian/: README.Debian  build.sh  changelog  control  copyright  libwosi-dev.install  libwosi.substvars  rules
src/: Makefile.am  mailtag.h  sync_cmd.h  wb_regs.h  wosi.c  wosi.h  wou.c  wou.h
src/wosi/: Makefile.am  README  bitfile.h  board.c  board.h  gpio.c  gpio.h
src/wou/: Makefile.am  Makefile.in  README  bitfile.c  board.c  board.h  crc.c  crc.h  dptrace.h  wb_regs.h
tests/: Makefile.am  Makefile.in  bandwidth-master.c  check_ar11-bbb.c  co2_top.bit  cp.sh  fpga_top.bit  mou-unit-test-slave.c  plasma_top.bit  servo_top.bit  setuid.sh  stepper_top.bit  sync_cmd.h  wou-unit-test-axis.c  wou-unit-test-bp_reg_update.c  wou-unit-test-gpio.c  wou-unit-test-home_pos.c  wou-unit-test-jcmd.c  wou-unit-test-prog.c  wou-unit-test-spi.c  wou-unit-test-ustep.c
tests/debug/: mou-unit-test-master.c  run.sh
