#
# $Id: Makefile.am 1381 2008-10-26 21:57:10Z arniml $
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

noinst_LTLIBRARIES = libwou.la

libwou_la_SOURCES = \
	bitfile.h \
	bitfile.c \
	board.h \
	board.c

# if ENABLE_LOWLEVEL_FTDI
# libmou_a_SOURCES += \
# 	usbconn/libftdi.c
# endif
# 
# if ENABLE_LOWLEVEL_FTD2XX
# libmou_a_SOURCES += \
# 	usbconn/libftd2xx.c
# endif
